--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 		<title>Hello World</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
-	<body>
+	<body background="http://sfwallpaper.com/images/background-image-for-website-1.jpg">
 		<header>
 			<div class="container">
 				<div class="row">
 					<div class="col1">
-						<img src="https://scontent-dfw1-1.xx.fbcdn.net/hphotos-ash2/v/t1.0-9/1656327_10152607966827075_4438255225263538558_n.jpg?oh=cb6ea8e80a9b7bca88bb63fe1e440566&oe=57707F79" alt="Profile picture">
+						<img src="https://www.freeiconspng.com/uploads/computer-user-icon-12.png">
 					</div>
 					<div class="col2">
 						<h1>Hello world,<br>my name is Ian</h1>
